--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -174,6 +174,19 @@ code {
   cursor: alias;
 }
 
+#playerInformationCard div {
+  display: flex;
+  flex-direction: column;
+}
+
+#mychances {
+  font-family: Metropolis-Medium;
+}
+
+#mycards{
+  flex-direction: row!important;
+}
+
 /* span.card-title.black-text:hover+.player-stats{
   display: block;
 } */
